# server/app/validators/api/v1/admin/login.ts
@@ -1,0 +1,10 @@
+import vine from '@vinejs/vine'
+
+/**
+ * Validator to use before validating user credentials
+ * during login
+ */
+export const loginAdminValidator = vine.create({
+    email: vine.string().email().maxLength(254),
+    password: vine.string(),
+})
